--- a/week-2/day-2/api-1/.env
+++ b/week-2/day-2/api-1/.env
@@ -1,6 +1,9 @@
 # variables are usually notated with all caps, and you dont need qoutres around string values
 PORT=8080
 
+# deciding which frontend servers are allowed access to our server
+CORS_WHITELIST=http://127.0.0.1:5500, http://127.0.0.1:5501
+
 # database properties
 DB_HOST=localhost
 DB_USER=root
